RESOLVED FIXED 258935
Fix content-visibility-fieldset-size.html
https://bugs.webkit.org/show_bug.cgi?id=258935
Summary Fix content-visibility-fieldset-size.html
Rob Buis
Reported 2023-07-06 09:39:12 PDT
Fix content-visibility-fieldset-size.html.
Attachments
Rob Buis
Comment 1 2023-07-06 09:59:00 PDT
Radar WebKit Bug Importer
Comment 2 2023-07-13 09:40:18 PDT
EWS
Comment 3 2023-07-22 03:35:19 PDT
Committed 266226@main (cb0fa67e33bc): <https://commits.webkit.org/266226@main> Reviewed commits have been landed. Closing PR #15602 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.