Fix content-visibility-fieldset-size.html https://bugs.webkit.org/show_bug.cgi?id=258935

Reviewed by Alan Baradlay.

Fix content-visibility-fieldset-size.html by preventing painting
fieldset contents where content-visibility causes the content to
be skipped.

* LayoutTests/TestExpectations:
* Source/WebCore/rendering/RenderBlock.cpp:
(WebCore::RenderBlock::adjustBorderBoxRectForPainting):
(WebCore::RenderBlock::paintRectToClipOutFromBorder):
(WebCore::RenderBlock::paintExcludedChildrenInBorder):

Canonical link: https://commits.webkit.org/266226@main